# MOOS-iCAN

./: CAN.cpp  CAN.h  CAN_Info.cpp  CAN_Info.h  CAN_field.cpp  CAN_field.hpp  CMakeLists.txt  LICENSE  README.md  iCAN.moos  main.cpp
schema/: channel_schema.h  channel_schema.json
